--- a/hack/kube/base/enduro-a3m.yaml
+++ b/hack/kube/base/enduro-a3m.yaml
@@ -50,6 +50,11 @@ spec:
                 secretKeyRef:
                   name: minio-secret
                   key: password
+            - name: WELLCOME_OAUTH_SECRETID
+              valueFrom:
+                secretKeyRef:
+                  name: wellcome-secret
+                  key: oauth-secret-id
             - name: ENDURO_DATABASE_DSN
               value: $(MYSQL_USER):$(MYSQL_PASSWORD)@tcp(mysql.enduro-sdps:3306)/enduro
             - name: ENDURO_STORAGE_DATABASE_DSN
@@ -66,6 +71,8 @@ spec:
               value: $(MINIO_USER)
             - name: ENDURO_UPLOAD_SECRET
               value: $(MINIO_PASSWORD)
+            - name: ENDURO_WELLCOME_OAUTH_SECRETID
+              value: $(WELLCOME_OAUTH_SECRETID)
           volumeMounts:
             - name: enduro-a3m
               mountPath: /home/a3m/.local/share/a3m/share
