--- a/hack/kube/tools/minio-recreate-buckets-job.yaml
+++ b/hack/kube/tools/minio-recreate-buckets-job.yaml
@@ -31,5 +31,6 @@ spec:
               mc mb enduro/aips --ignore-existing;
               mc mb enduro/perma-aips-1 --ignore-existing;
               mc mb enduro/perma-aips-2 --ignore-existing;
+              mc mb enduro/wellcome-uploads --ignore-existing;
               mc event add enduro/sips arn:minio:sqs::PRIMARY:redis --event put --ignore-existing",
             ]
